[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/menu/option_menu/player_icon.gd" type="Script" id=1]
[ext_resource path="res://image/menu/option_menu/icon.png" type="Texture" id=2]
[ext_resource path="res://image/menu/option_menu/icon_add.png" type="Texture" id=3]
[ext_resource path="res://fonts/Play-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://image/menu/play_menu/immun_arrow.png" type="Texture" id=6]
[ext_resource path="res://image/menu/option_menu/x.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 4 )

[node name="player_icon" type="TextureRect" groups=[
"icon",
]]
margin_right = 651.0
margin_bottom = 435.0
texture = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="add" type="Node2D" parent="."]

[node name="icon_add" type="Sprite" parent="add"]
position = Vector2( 326.572, 216.834 )
scale = Vector2( 0.990691, 0.983767 )
texture = ExtResource( 3 )

[node name="add_button" type="TextureButton" parent="add"]
margin_left = 3.0
margin_top = 5.0
margin_right = 646.0
margin_bottom = 428.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="char" type="Node2D" parent="."]
visible = false

[node name="name" type="TextEdit" parent="char"]
modulate = Color( 0.447059, 1, 0.784314, 1 )
margin_left = 15.0
margin_top = 14.0
margin_right = 576.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 1 )
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gender" type="Label" parent="char"]
margin_left = -24.3092
margin_top = 80.9321
margin_right = 184.691
margin_bottom = 125.932
custom_fonts/font = SubResource( 2 )
text = "Gender: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gender_text" type="Label" parent="char"]
margin_left = 202.404
margin_top = 79.5355
margin_right = 583.404
margin_bottom = 132.536
custom_fonts/font = SubResource( 2 )
text = "Male"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="arrow" type="Sprite" parent="char/gender_text"]
position = Vector2( 413.729, 29.7999 )
rotation = -1.58382
scale = Vector2( 0.662791, 0.650794 )
texture = ExtResource( 6 )

[node name="gender_button" type="TextureButton" parent="char"]
margin_left = 154.0
margin_top = 75.0
margin_right = 642.0
margin_bottom = 131.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gender_scroll" type="ScrollContainer" parent="char"]
visible = false
margin_left = 190.0
margin_top = 71.0
margin_right = 617.0
margin_bottom = 138.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="char/gender_scroll"]

[node name="group" type="Label" parent="char"]
margin_left = 12.1838
margin_top = 151.137
margin_right = 190.184
margin_bottom = 196.137
custom_fonts/font = SubResource( 2 )
text = "Group:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="group_text" type="Label" parent="char"]
margin_left = 202.378
margin_top = 150.997
margin_right = 581.378
margin_bottom = 203.997
custom_fonts/font = SubResource( 2 )
text = "District 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="arrow" type="Sprite" parent="char/group_text"]
position = Vector2( 416.271, 27.4785 )
rotation = -1.58382
scale = Vector2( 0.662791, 0.650794 )
texture = ExtResource( 6 )

[node name="group_button" type="TextureButton" parent="char"]
margin_left = 155.0
margin_top = 147.0
margin_right = 642.0
margin_bottom = 203.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="group_scroll" type="ScrollContainer" parent="char"]
visible = false
margin_left = 187.977
margin_top = 142.06
margin_right = 607.977
margin_bottom = 213.06
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="char/group_scroll"]

[node name="hunger" type="Label" parent="char"]
margin_left = 10.8192
margin_top = 228.158
margin_right = 254.819
margin_bottom = 273.158
custom_fonts/font = SubResource( 2 )
text = "Hunger points:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="thirst" type="Label" parent="char"]
margin_left = 10.7865
margin_top = 297.464
margin_right = 230.786
margin_bottom = 342.464
custom_fonts/font = SubResource( 2 )
text = "Thirst points:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health" type="Label" parent="char"]
margin_left = 10.5353
margin_top = 370.714
margin_right = 233.535
margin_bottom = 415.714
custom_fonts/font = SubResource( 2 )
text = "Health points"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hunger_points" type="TextEdit" parent="char"]
modulate = Color( 0.447059, 1, 0.784314, 1 )
margin_left = 275.146
margin_top = 227.0
margin_right = 607.146
margin_bottom = 278.0
custom_fonts/font = SubResource( 1 )
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="thirst_points" type="TextEdit" parent="char"]
modulate = Color( 0.447059, 1, 0.784314, 1 )
margin_left = 274.879
margin_top = 294.882
margin_right = 606.879
margin_bottom = 345.882
custom_fonts/font = SubResource( 1 )
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health_points" type="TextEdit" parent="char"]
modulate = Color( 0.447059, 1, 0.784314, 1 )
margin_left = 275.515
margin_top = 364.417
margin_right = 607.515
margin_bottom = 415.417
custom_fonts/font = SubResource( 1 )
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x_button" type="TextureButton" parent="."]
visible = false
margin_left = 584.411
margin_top = 10.2811
margin_right = 687.411
margin_bottom = 103.281
rect_scale = Vector2( 0.537628, 0.572895 )
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="add/add_button" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="char/gender_button" to="." method="_on_gender_button_pressed"]
[connection signal="pressed" from="char/group_button" to="." method="_on_group_button_pressed"]
[connection signal="focus_exited" from="char/hunger_points" to="." method="_on_hunger_points_focus_exited"]
[connection signal="focus_exited" from="char/thirst_points" to="." method="_on_thirst_points_focus_exited"]
[connection signal="focus_exited" from="char/health_points" to="." method="_on_health_points_focus_exited"]
[connection signal="pressed" from="x_button" to="." method="_on_x_button_pressed"]
